--- a/.env
+++ b/.env
@@ -1,21 +1,6 @@
-# In all environments, the following files are loaded if they exist,
-# the latter taking precedence over the former:
-#
-#  * .env                contains default values for the environment variables needed by the app
-#  * .env.local          uncommitted file with local overrides
-#  * .env.$APP_ENV       committed environment-specific defaults
-#  * .env.$APP_ENV.local uncommitted environment-specific overrides
-#
-# Real environment variables win over .env files.
-#
-# DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
-# https://symfony.com/doc/current/configuration/secrets.html
-#
-# Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
-# https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
-
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=8d26d53c76d94a6b0253bd6999b2f39f
-###< symfony/framework-bundle ###
+###> symfony/framework-bundle ###
+
 NASA_API_KEY=p960B4skMQHGdPnetw2KYFVzzoomz4GV5oZMZjUM
